--- a/uc3-v12.yaml
+++ b/uc3-v12.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: uc3-ai-scheduler
+  name: uc3aischeduler
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -143,3 +143,4 @@ spec:
         - name: uc3step2
           image: sebastianomengozzi/uc3step2:latest
           command: ["sleep", "1000"]
+
